Use csrf_token template tag to set csrftoken for post requests

--- a/moteur/templates/moteur/index.html
+++ b/moteur/templates/moteur/index.html
@@ -11,6 +11,7 @@
   </head>
 
   <body>
+    {% csrf_token %}
     <header class="hidden-print">
 			<noscript>Vous avez besoin d'activer JavaScript pour voir cette application.</noscript>
 		</header>
